plugins {
    id 'java'
    id "io.freefair.lombok" version "6.5.1"
}

group = 'by.klimov'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaLanguageVersion.of(17)
    targetCompatibility = JavaLanguageVersion.of(17)
}

ext {
    junitVersion = '5.9.2'
    mockitoVersion = '5.6.0'
}

dependencies {
    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.0.0-M4'
    testImplementation 'org.assertj:assertj-core:3.24.2'
    testImplementation group: 'org.skyscreamer', name: 'jsonassert', version: '1.5.1'
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")

    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")

    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.13.0'
    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.11.0'

    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
}

test {
    useJUnitPlatform()
}